@@ -1,3 +1,6 @@
+[b]2.15[/b]
+*Added Legion currencies
+
 [b]2.14[/b]
 *toc update for Legion
 
